# monclub-bot

./: .env.example  .gitignore  Cargo.toml  README.md  REVERSE_ENGINEERING.md  users.json.example
assets/book_session.folder/: Request - BASE_URL_sessions_book_licenseeFromClub.txt  Response - BASE_URL_sessions_book_licenseeFromClub.txt
assets/cancel_session.folder/: Request - BASE_URL_sessions_book_licenseeFromClub.txt  Response - BASE_URL_sessions_book_licenseeFromClub.txt
assets/get_all_sessions/: Request - BASE_URL_sessions_withuser.txt
assets/get_all_sessions.folder/: Response - BASE_URL_sessions_withuser.txt
assets/get_previous_sessions.folder/: Request - BASE_URL_bookings_user_id.txt  Response - BASE_URL_bookings_user_id.txt
assets/post_all_events.folder/: Request - BASE_URL_nearfilters_favorite_myclub.txt  Response - BASE_URL_nearfilters_favorite_myclub.txt
src/: client.rs  config.rs  lib.rs  logging.rs  main.rs
