[package]
name = "monclub-bot"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1"
inquire = { git = "https://github.com/TomPlanche/inquire", branch = "tomPlanche/feat/tubular-multiselect" }
chrono = "0.4"
dotenvy = "0.15"
simplelog = "0.12"
log = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
